--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
@@ -18,6 +20,7 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.24",
     "tailwindcss-textshadow": "^2.1.3",
     "typescript": "4.7.2"
